Prepare backend for Render deployment
- Add DATABASE_URL env var support for Neon PostgreSQL
- Make RabbitMQ credentials configurable via env vars
- Add configurable CORS origins via CORS_ALLOWED_ORIGINS env var
- Remove hardcoded @CrossOrigin annotations from controllers